--- a/styles/style.css
+++ b/styles/style.css
@@ -1126,6 +1126,22 @@ footer p {
       font-size: 3rem;
     }
   }
+  @-webkit-keyframes changePosition {
+    from {
+      right: -5%;
+    }
+    to {
+      right: -40%;
+    }
+  }
+  @keyframes changePosition {
+    from {
+      right: -5%;
+    }
+    to {
+      right: -40%;
+    }
+  }
   /******************* KEYFRAMES MEDIA QUERIES END (LARGE SCREEN) *****************************/
 }
 @media (max-width: 1355px) {
@@ -1229,13 +1245,20 @@ footer p {
 
   /******************* TOOLKIT SECTION MEDIA QUERIES END (TABLET)*****************************/
   /******************* PROJECT SECTION MEDIA QUERIES START (TABLET)*****************************/
+  .projects {
+    -webkit-transform: translate3d(0, 0, 0);
+  }
   .projects h2 {
     -ms-flex-item-align: center;
         align-self: center;
   }
   .projects ul li {
+    z-index: 1;
     max-width: 100%;
     margin: 40px 0;
+  }
+  .projects svg {
+    z-index: -1;
   }
   .projects .exclamationMark {
     top: 31%;
@@ -1396,15 +1419,11 @@ form textarea {
 
   /******************* TOOLKIT SECTION MEDIA QUERIES END (MOBILE)*****************************/
   /******************* PROJECT SECTION MEDIA QUERIES START (MOBILE)*****************************/
-  .projects ul {
-    -webkit-transform: translate3d(0, 0, 0);
-  }
   .projects ul li {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    z-index: 1;
   }
   .projects ul li:nth-child(2) {
     -webkit-box-orient: vertical;
@@ -1424,9 +1443,6 @@ form textarea {
   }
   .projects .projectText p:first-child {
     text-align: center;
-  }
-  .projects svg {
-    z-index: -1;
   }
   .projects .exclamationMark {
     top: 10%;
